# Thesis

./: .gitignore  LICENSE  pyproject.toml
.github/workflows/: ci.yml
configs/: base.yaml  efficientnet_b0.yaml
src/padufes20/: cli.py  config.py
src/padufes20/data/: padufes20.py  schema.py  splits.py
src/padufes20/eval/: calibration.py  infer.py  metrics.py  plots.py
src/padufes20/models/: registry.py
src/padufes20/training/: engine.py
src/padufes20/utils/: io.py  seed.py
tests/: test_metrics.py  test_splits.py
